# conjanki

./: .env.example  Cargo.toml  README.md  conjanki.toml
docs/plans/: conjanki.md
migrations/: 20260407000001_initial_schema.down.sql  20260407000001_initial_schema.up.sql
src/: config.rs  error.rs  main.rs  state.rs
src/anki/: client.rs  models.rs
src/db/: decks.rs  drill_items.rs  mod.rs  sessions.rs  verbs.rs
src/japanese/: analyzer.rs  conjugation.rs  mod.rs
src/routes/: dashboard.rs  drill.rs  mod.rs  stats.rs  sync.rs
src/srs/: scheduler.rs
src/templates/: dashboard.rs  drill.rs  layout.rs  mod.rs  stats.rs
static/: style.css
static/controllers/: drill_controller.js  sync_controller.js  timer_controller.js
