[package]
name = "conjanki"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }

# HTML templates
maud = { version = "0.27", features = ["axum"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid",
    "migrate",
] }

# Config
dotenvy = "0.15"
envy = "0.4"
toml = "0.8"

# HTTP client (AnkiConnect)
reqwest = { version = "0.12", features = ["json"] }

# Japanese morphological analysis
lindera = { version = "3", features = ["embed-ipadic"] }

# Japanese verb conjugation
jp_inflections = "0.1"

# Spaced repetition
fsrs = "5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum-extra = { version = "0.10", features = ["form"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
eyre = "0.6"
color-eyre = "0.6"
